            Fix Date.toString for dates before 1970
            STM32: Fix handling of months when setting the internal RTC
            Move to a faster jsvNewFlatStringOfLength which avoids blocking memory allocation
            nRF5x: If a task is in progress, report the task ID (BleTask enum)
            nRF52: Report central mode promise errors correctly if returned by softdevice

     1v93 : Ensure that specifying too many advertising UUIDs causes an exception, not a reboot
            nRF5x: Fix for time jump caused by reentrancy in jshGetSystemTime
            Fix regression causing multiple end/close callbacks when using standard TCP/IP socket client/server
            Ensure NetworkJS reports receive errors back correctly
            nRF5x: Fix issue where connect and immediate disconnect could in some cases trigger an error from nordic's libraries that'd cause a reboot
            Fix regression that caused Original Espruino to have lost Filesystem/hashlib/neopixel support in 1v92
	    Re-add TV output to Original Espruino
            Fix some stack overflow bugs on Linux found by fuzzing (#1147)
            Remove un-needed code for parsing '.' in var statement (#1147)
            Add autocomplete for pin names (fix #1124)
            Add Array.indexOf fromIndex support (fix #162)
            Puck.js: Add BluetoothRemoteGATTServer.startBonding to allow bonding to be initiated when Puck.js is a central
            Fat FS: closedir after readdir, FS errors should be catchable (#1164), fs.statSync (#1163)
            Allow hardware (CTS) flow control (fix #1165)
            nRF52: Add AntiCat's patch to Nordic's NFC library to cope with malformed NFC requests
            Puck.js: Fix increased battery drain after NFC usage (fix #1171)
            Puck.js: Fix WS2811 output library that would output bad data after neopixel waveform (fix #1154)
            nRF52: Seed random number generator at boot (fix #1166)