@@ -15,6 +15,7 @@
             Move to a faster jsvNewFlatStringOfLength which avoids blocking memory allocation
             nRF5x: If a task is in progress, report the task ID (BleTask enum)
             nRF52: Report central mode promise errors correctly if returned by softdevice
+            Remove 'out of memory' warning messages (it's stored as a flag anyway)
 
      1v93 : Ensure that specifying too many advertising UUIDs causes an exception, not a reboot
             nRF5x: Fix for time jump caused by reentrancy in jshGetSystemTime
